benchmarks: the crossing cost between our batches and Comet, both directions; part of #279 (#303)
Part of #279 -- slice 2 of 3: the crossing cost.

CrossingBenchmark (JMH, benchmarks module) measures a batch of ours into Comet and back, over the issue's matrix: 4096 and 8192 rows; 4, 8 and 16 columns; INT64 with and without validity, FLOAT64, UTF8 of 12-40 bytes, a 1000-value UTF8 dictionary, decimal(12,2) on the INT64 lane. Into Comet is the real path (CometBatchBridge.convert: ArrowCData export through the C Data interface, Comet's ArrowImporter, the imported vectors released); back is ColumnVectorAdapters.adapt through the registered CometVectorAdapter over the Comet vectors a conversion produced. Runs with the Comet jar first on the classpath and the run scripts' module opens, which the fork carries.

Measured (x86-64, JDK 25, one thread; 8 columns): a fixed-width or plain-string column is a pointer hand-over going in, about 2.7-3 us per column regardless of rows (21-25 us per batch at both row counts, 0.3-0.7 ns per row per column), and zero-copy coming back (0.1-0.25 us per column). Two lanes pay per row: a dictionary string column is decoded on the way in at 20-25 ns per row per column (1.4 ms for 8 columns x 8192 rows, more than most of our operators spend on such a batch); an INT64-lane decimal is widened to Decimal128 going in (2.5-3 ns per row per column) and narrowed back (0.4-0.5 ns).

The study's rule follows: a swap candidate must beat ours by more than twice the crossing of the columns it touches -- a few microseconds per batch for fixed-width lanes, ~45 ns per row per column for dictionary strings, ~6 ns for INT64 decimals.

Docs: docs/results.md 'Hybrid planning study (#279)' with the crossing table and reading; docs/comet.md the measured crossing paragraph; AGENTS.md 3.8 the number and the command.

Crew: Butterfly (Kiro Crew Issue Radar)

Gate: mvn -B -Piceberg -pl kernels,spark,benchmarks install -- kernels 176 tests, Spark 259 tests, benchmarks